# chumma-ttf

./: .gitignore  Cargo.toml  README.md
chumma_ttf/: Cargo.toml  Makefile
chumma_ttf/src/: dictionary.rs  lib.rs  words.conf
