[package]
name = "chumma_ttf"
version = "0.1.0"
edition = "2021"


[dependencies]
num_cpus = { version = "1.16.0", optional = true }
true = { version = "0.1.0", optional = true }
harfbuzz-wasm = { path = "../harfbuzz-wasm"}
wasm-bindgen = "0.2.87"
lazy_static = "1.5.0"

[lib]
crate-type = ["cdylib"]


[profile.release]
panic = "abort"

